--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,7 @@ Flask==2.3.3
 Flask-SQLAlchemy==3.0.5
 Flask-CORS==4.0.0
 python-dotenv==1.0.0
-langchain-openai==0.1.7
-langchain==0.2.3
+openai==1.3.0
 PyGithub==1.59.1
 requests==2.31.0
 pathspec==0.11.2
